<resources>
    <string name="app_name">StarGaze</string>
    <string name="title_user">User</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_camera">Camera</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stars">Stars</string>
    <string name="biography">Biography:</string>
    <string name="edit_info">Edit Info</string>
    <string name="search">Search</string>
    <string name="wds_name">WDS Name:</string>
    <string name="minimum_delta_magnitude">Minimum Delta Magnitude:</string>
    <string name="maximum_delta_magnitude">Maximum Delta Magnitude:</string>
    <string name="open">Open</string>
</resources>