<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_user" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>