<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_user">

    <fragment
        android:id="@+id/navigation_user"
        android:name="edu.rosehulman.stargaze.ui.User.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="edu.rosehulman.stargaze.ui.Search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="edu.rosehulman.stargaze.ui.Favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="edu.rosehulman.stargaze.ui.Camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="edu.rosehulman.stargaze.ui.Settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>