<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.StarGaze"
    android:background="@color/gray"
    tools:context=".ui.Search.SearchFragment"
    android:padding="20dp">
        <TextView
            android:id="@+id/WDS_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wds_name" />
        <EditText
            android:id="@+id/WDS_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/WDS_name_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/min_RA_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Minimum RA: "
            android:layout_below="@id/WDS_name_edittext"
            />
        <EditText
            android:id="@+id/min_RA_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/min_RA_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/max_RA_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maximum RA: "
            android:layout_below="@id/min_RA_edittext"
            />
        <EditText
            android:id="@+id/max_RA_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/max_RA_text"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/min_Dec_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Minimum Dec: "
            android:layout_below="@id/max_RA_edittext"
            />
        <EditText
            android:id="@+id/min_Dec_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/min_Dec_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/max_Dec_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maximum Dec: "
            android:layout_below="@id/min_Dec_edittext"
            />
        <EditText
            android:id="@+id/max_Dec_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/max_Dec_text"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/min_deltasep_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Minimum Delta Separation: "
            android:layout_below="@id/max_Dec_edittext"
            />
        <EditText
            android:id="@+id/min_deltasep_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:background="@color/white"
            android:layout_below="@id/min_deltasep_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/max_deltasep_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maximum Delta Separation: "
            android:layout_below="@id/min_deltasep_edittext"
            />
        <EditText
            android:id="@+id/max_deltasep_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="numberDecimal"
            android:layout_below="@id/max_deltasep_text"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/min_deltamag_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimum_delta_magnitude"
            android:layout_below="@id/max_deltasep_edittext"
            />
        <EditText
            android:id="@+id/min_deltamag_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="numberDecimal"
            android:layout_below="@id/min_deltamag_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/max_deltamag_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maximum_delta_magnitude"
            android:layout_below="@id/min_deltamag_edittext"
            />
        <EditText
            android:id="@+id/max_deltamag_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/max_deltamag_text"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/min_obs_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Minimum Number of Observations: "
            android:layout_below="@id/max_deltamag_edittext"
            />
        <EditText
            android:id="@+id/min_obs_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/min_obs_text"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/max_obs_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maximum Number of Observations: "
            android:layout_below="@id/min_obs_edittext"
            />
        <EditText
            android:id="@+id/max_obs_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/max_obs_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/min_sep_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Minimum Separation: "
            android:layout_below="@id/max_obs_edittext"
            />
        <EditText
            android:id="@+id/min_sep_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/min_sep_text"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/max_sep_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maximum Separation: "
            android:layout_below="@id/min_sep_edittext"
            />
        <EditText
            android:id="@+id/max_sep_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/max_sep_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/min_mag_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Minimum magnitude: "
            android:layout_below="@id/max_sep_edittext"
            />
        <EditText
            android:id="@+id/min_mag_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/min_mag_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/max_mag_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maximum magnitude: "
            android:layout_below="@id/min_mag_edittext"
            />
        <EditText
            android:id="@+id/max_mag_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/max_mag_text"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/first_obs_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="First Observed by: "
            android:textColor="@color/white"
            android:layout_below="@id/max_mag_edittext"
            />
        <EditText
            android:id="@+id/first_obs_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@id/first_obs_text"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/last_obs_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Last observed by: "
            android:layout_below="@id/first_obs_edittext"
            android:textColor="@color/white"
            />
        <EditText
            android:id="@+id/last_obs_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:layout_below="@id/last_obs_text"
            />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_obs_edittext"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:text="@string/search"
            />

</RelativeLayout>
</ScrollView>